dri/pvr: Introduce PowerVR DRI driver.
Change-Id: Ied94552937389a736124347d2f068b7066eff198

--- a/src/meson.build
+++ b/src/meson.build
@@ -26,6 +26,7 @@ inc_src = include_directories('.')
 inc_gallium = include_directories('gallium/include')
 inc_gallium_aux = include_directories('gallium/auxiliary')
 inc_amd_common = include_directories('amd/common')
+inc_pvr = include_directories('mesa/main', 'mapi/glapi')
 
 libglsl_util = static_library(
   'glsl_util',
